--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -13,7 +13,9 @@
 <ul>
 
   <% @person.phone_numbers.each do |phone| %>
-    <li><%= phone.number %> <%= link_to('edit', edit_phone_number_path(phone)) %></li>
+    <li><%= phone.number %>
+      <%= link_to('edit', edit_phone_number_path(phone)) %>
+    
   <% end %>
 
 </ul>
